Add book result endpoint (no text) next to full book endpoint
